# ChangeLog for net-libs/libcapsinetwork
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libcapsinetwork/ChangeLog,v 1.15 2008/05/04 09:57:41 drac Exp $

  04 May 2008; Samuli Suominen <drac@gentoo.org>
  +files/libcapsinetwork-0.3.0-64bit.patch,
  +files/libcapsinetwork-0.3.0-gcc43.patch,
  +files/libcapsinetwork-0.3.0-parallel.patch, libcapsinetwork-0.3.0.ebuild:
  Fix server busy loop with 64bit architectures. Fix parallel make. Fix
  building with GCC 4.3 wrt #218831, thanks to Peter Alfredsen. Also, run
  full eautoreconf to fix obscure compile failure where _init gets
  redefined.

  15 May 2007; Thilo Bangert <bangert@gentoo.org> metadata.xml:
  add <herd>no-herd</herd>

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  08 Jan 2007; Danny van Dyk <kugelfang@gentoo.org>
  -libcapsinetwork-0.2.5.ebuild:
  QA: Removed unused versions.

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  05 Sep 2004; Sven Wegener <swegener@gentoo.org> :
  Fixed ChangeLog header.

*libcapsinetwork-0.3.0 (19 Jul 2004)

  19 Jul 2004; Michael Sterrett <mr_bones_@gentoo.org>
  +libcapsinetwork-0.3.0.ebuild:
  version bump

*libcapsinetwork-0.2.5 (29 Jan 2004)

  29 Jan 2004; Michael Sterrett <mr_bones_@gentoo.org>
  libcapsinetwork-0.2.5.ebuild:
  version bump

*libcapsinetwork-0.2.3 (06 Jan 2003)

  17 Feb 2003; Martin Holzer <mholzer@gentoo.org> libcapsinetwork-0.2.3.ebuild:
  Didn't want emake, changed to make. Closes #15792.

  06 Jan 2003; Hannes Mehnert <hannes@gentoo.org> libcapsinetwork-0.2.3.ebuild:
  version bump, thanks to cap@capsi.com (Rob Kaper) (bug #9872)

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*libcapsinetwork-0.1.1 (1 Aug 2002)

  1 Aug 2002; J. Alberto Suárez López <bass@gentoo.org> libcapsinetwork-0.1.1.ebuild
  First realse 
