@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=|| ( >=sys-devel/automake-1.12:1.12 >=sys-devel/automake-1.13:1.13 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
+DESCRIPTION=C++ network library to allow fast development of server daemon processes
+EAPI=5
+HOMEPAGE=http://unixcode.org/libcapsinetwork
+IUSE=static-libs
+KEYWORDS=~amd64 ~arm ~mips ~ppc ~sparc ~x86 ~amd64-linux ~x86-linux
+LICENSE=LGPL-2.1
+SLOT=0
+SRC_URI=http://unixcode.org/downloads/libcapsinetwork/libcapsinetwork-0.3.0.tar.bz2
+_eclasses_=autotools	16761a2f972abd686713e5967ff3c754	autotools-utils	0954dce983a8c7cfe4e2b55263cb7a05	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	2ff578fb151da221e1797f12e2990e72	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	a2130e6fc4aa4c6a24b265ca0cbcc2b6	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=9520bf32f5c09afd902862b2231be276
