@@ -1,19 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX libcapsinetwork-0.3.0-64bit.patch 665 RMD160 b3e078f1e779ca57e9a4349cc67d14c7c721e2ff SHA1 055bbe040535fead1952c28ad84667b790cad662 SHA256 6f18d966dd27c8fbc23dd5e2575f130a2159b9c0d6e090095fdfcbeadebe25ef
-AUX libcapsinetwork-0.3.0-gcc43.patch 1591 RMD160 f5651bb8cee262a6a3816445090e26c8e8d0faaa SHA1 d15f7248e7878864fab3ae96d732b04646197f26 SHA256 264af5499cddc5da929c648b65fadad7d22d0f11b2e907e8fff6e1be40e12b0b
-AUX libcapsinetwork-0.3.0-parallel.patch 490 RMD160 0c5301ffb75f3116cdd1b607f8d373773fe86eec SHA1 7fc9e65569b5c44c2945cd6c4ba664f35255f4bc SHA256 432d2a795e568767f674a4a1db88a4a4a9982579ec3e1e200d41fb77b9681b3b
-DIST libcapsinetwork-0.3.0.tar.bz2 189244 RMD160 67595c44154b1d7eb4411725dac3e78e6bb5beb5 SHA1 ddd4ddf6b5c96719e72722dff099c119a4e736b8 SHA256 3177f82d08c125aef1cf1c3d7aaf222cdc8605ec38d6dae9deeaffcffc72e3eb
-EBUILD libcapsinetwork-0.3.0.ebuild 915 RMD160 6b5563eac8e347055fc50d649a5c832957bcf2be SHA1 03f58e114aa5f3bf0faa2b373125a2ef62c103ee SHA256 9f36def6ba522be8959398d9b7bc24726514edf2312e17b7a7cdc71d3771aebb
-MISC ChangeLog 1968 RMD160 6383ec31d5dd9fa67f49e0907f4ccf26a4d0f100 SHA1 065ea07ea182a1b8662b6af55ddfcdaf92b1d27f SHA256 64c5891c88892d543704582d879d0381503eba310f8124edb58f2429e366ac60
-MISC metadata.xml 210 RMD160 c9fe92a44d079ef04bcdd31de9867de5bb9f26e5 SHA1 efa00493ddec7289a21bc4cbcc6e95ec4de749d5 SHA256 90082fe26a119a63ca8fbe227f66c33ba74167b6cf28e2cef02dea6c4f656c39
+AUX libcapsinetwork-0.3.0-64bit.patch 665 SHA256 6f18d966dd27c8fbc23dd5e2575f130a2159b9c0d6e090095fdfcbeadebe25ef SHA512 1fac375f9261d6d8540e7abf902ae6399e2584043d1fda9656004f7eb9270bd7e8975bebadc1d89a0030140bacea8b176f82eb0bd5356c3dc3b0afea824a6f22 WHIRLPOOL 08e5484a07b0664e53c247a536c39148a5ef7d452d3f5a17ed73fd69eac56dbd5dc4be06e78c416a4b02d862d61091446a24c503ce7b0160d3ca017e440b7e30
+AUX libcapsinetwork-0.3.0-gcc43.patch 1591 SHA256 264af5499cddc5da929c648b65fadad7d22d0f11b2e907e8fff6e1be40e12b0b SHA512 26dd145abd500b640ca4e17d77f149bfae85f5a3920f0a7e1090189b5cc816df8259a4b6e40dcd0b363ac079e9b4a81f90f67b1ff8a22d3dc3f44a953d3d87c0 WHIRLPOOL c08e274d0c682d3c3e1252507de26a10a035cd21a626e19ad1cd28cc4d5763652204354caad7c1765316a599b9d30d321a0268aacade2eeddf8ee24a81dc0877
+AUX libcapsinetwork-0.3.0-parallel.patch 490 SHA256 432d2a795e568767f674a4a1db88a4a4a9982579ec3e1e200d41fb77b9681b3b SHA512 46a64595426d08b610b81b6083488aff920675dd182f69201a7141f11d0bb131a604a55299aaf0e1bbfb111657b576df6ee0cf9e639dce4f1854aa0ac501680c WHIRLPOOL fff5bd9110524afc6f3697e24d455d76ad69ad16b7422588d9d93d4670cab179eda29e78aadbe747f79c797d4daf0e74a7d3a354d797ddcc5f93573c0fa00120
+DIST libcapsinetwork-0.3.0.tar.bz2 189244 SHA256 3177f82d08c125aef1cf1c3d7aaf222cdc8605ec38d6dae9deeaffcffc72e3eb SHA512 7a85bc51fa3e9d09db0d76e296e8ab920b0c062071215100f87b76011ac6a0e70c441826fdf5f058de98474b3b7ad9efd044a293a4954a9bb7e66cf2a05abe8b WHIRLPOOL 13b0383e2944bec59d55e247c7c246ebfca132ae41668b9d98e2fd6a5bdec70c6a4819109a433e067509647390b92e305e157dbefbb096a70db46f9d5bf1de6f
+EBUILD libcapsinetwork-0.3.0-r1.ebuild 881 SHA256 4bec559923a63ff8ccaefa86177d9b26ee4b891ba917f49c7561f7c0998cec42 SHA512 d81db57217fdba0ac50b384c199914e7515404fd0b91f6ed2bb6e9e65d54a349a4b29288f9982dba5d85ec6626308d6f7bbdb9c1afd9d41ea86cc1aa17056413 WHIRLPOOL 299e3ee4109bba4abdda8c0c4d0509875fe87ce43c3760e4bba07ee77ff9db292f4678d80872307ee729f6bba1ab9a4d545031595d1183c62361784486de5537
+EBUILD libcapsinetwork-0.3.0.ebuild 915 SHA256 9f36def6ba522be8959398d9b7bc24726514edf2312e17b7a7cdc71d3771aebb SHA512 70aac88d486fe51d49dc23387a63d201d5cddb92f77c458e5590e80a0a58b22677375248d2ed4031a87cd9af7a0d8e3f41abadb06b5ddef573f8b1bdcd12050e WHIRLPOOL 05c20c3035259269c2a74a599dac1448a968e6834a24f1b3c55e87bee11843559b7b92e863ca459ca402fcb53e68f79077ca467510c7c62bef044082e3ae9852
+MISC ChangeLog 2297 SHA256 88d19d1992aa5335304f5359cabc21ea703ef3421a407c157b18aa2c8c66f31d SHA512 348e7a3dc5df39c54418c9eb51858c11bd323c3e651ef1a4cd544e6d1f777da9fbd161fa68e1cd4acdec9d77bd8e4be054a2cf07e2226fcf0bdd52592e7cbe09 WHIRLPOOL d6479347090a80bcbf9a88a956f70f9fa640beca9fa5bc2863b8e6f9674fefa7238c724727a0a5856f5785b44458bc9d2175d6f3a94373db5ec4f031b53ffc0f
+MISC metadata.xml 233 SHA256 a93cf5c4e554b97b2a48b92f801e3a3d87833cac311db0160a387a757ab7054c SHA512 704c94018edcbc53edcf0a41c2603dd59ea217aa5871f35d4d17f7df26156b8fb0a735d2efb11b74256565db01e6790a833242de39c29a9e46ed8ed96d505334 WHIRLPOOL 57f455cf256b91fb72e642f5a861e7367961775f2ab992b8afc798ff376c9a2bc8860d09f2bc43c870531248484128c966f25a081b7789a31ba9fb4f52b5519c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.18 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iJwEAQEIAAYFAk59rVIACgkQfXuS5UK5QB1nxwQAsEiG2EY2aNQw98RS3JfuYJAR
-1I4T1jh3OBnIBrz9sHpnLlZlgVzfSv475H5K1WQ5eMrRQ12N8prchprUDwkI03Je
-u0vGnU6DZIDPEZuyoFkRYMbX8AE7kI8dH/5TNdGH5eGG3KZLAVj2MwrZ/iZ2NrgH
-kEms5YMrvTMXCYw5vB4=
-=D/D0
+iQEcBAEBCAAGBQJSQBQ+AAoJECo/aRed9267seYH/0+69WS0nmu8kxIGV9CKRnR9
+E1DLWUIJOxc1j4m73Y+WPidBmUHtq6hWmNUwmkbCioR8cDRv6QqtGDLjbP9GHy5n
+aqTuFknHUGTAxCbmpzGSiXwLqv+JK0heeVhDe3XCXAZITbk9C526VvodN+CegggH
++NlG1N4mb0J9jhJ8bSf1hXobRyyizWQ6F1YLjd4KKj/3VzA8drOZC+RNCJxBFnJh
+eX1sT/GBpkTqMIk0LbKRjmdIflbEWkYTO9RFf6Ko0h6cq4ZcWog0knikheCTXinA
+8wXc93lfa1sO1L7PrvkZip6xOBNdwXaGR40UL6SrTjzGfWddlXVhn86t71vFrBE=
+=QESp
 -----END PGP SIGNATURE-----
