@@ -6,18 +6,20 @@ AUX htpdate.init 654 SHA256 effbc3de18ddcfffc5c0e4eee1f15e2828f036e9fbe66899f1e0
 AUX htpdate.init-r1 621 SHA256 4e39260c5a37e608b0d0c6a91281e2cf5f3c483b5d17bee4f3ae3da753765fee SHA512 4af401f8bcb958f46de930c24ea44e06a2529d80a589710058faf602f98ec74052c32c1cfa2908a2589521c8756a7e170e804a685d2d995feffff0f49e39296f WHIRLPOOL 62684ef055a2faee7cc001bc8529128f999983fe52b7c95b7f0b32bc550962a2bdc1d0092867933e704a56f15e9f33d728470089d91e1d83fc06582840d521bf
 DIST htpdate-1.0.4.tar.gz 16474 SHA256 8c59b3f66a429eb3be038f66eb9f942398fca9002fe2c3f027010c815f91dedd
 DIST htpdate-1.0.5.tar.gz 16579 SHA256 f465059495eae91437eb5eec7af92f1374eb3836f50926e8e5718818abf91e9a SHA512 fc4c01f08b59ff1d0335d8a16248106f97146dcf98031dda6023f500e3451e251bb3ea7f17bfe4309b3a1c6c9c89e62452fa4a458015e2b9a90e0ccb20e51de2 WHIRLPOOL aa7322ce08f4356a721d37f130aa6015a434fc1d6c80b6992ea08926705a6c5b0f2f3625c7b350202fcb624d3c4d3d59e1afbd857b24121edd282e5a47c2494b
+DIST htpdate-1.0.7.tar.gz 16848 SHA256 ba0b3f7b42306f2e2e146624785f80cc472eac9e7885007df50af0e1a21735c4 SHA512 83408545d1d2cc794f62efaf348e54cc2ce47dfb27815710e92d0c7d34360a581e637ef82424030c8a4fcabcc9a07205518fac08f426b37c7c4519cfa6696360 WHIRLPOOL e2e949d20b8d4afecd6c3c09aefa203417b16a4061e6d2fe05cf5e37d0dc736604ed5e1f0d8c03146eb3b5031ffc3ed8ec3213171513e6140a098bd1d5f268fb
 EBUILD htpdate-1.0.4.ebuild 1016 SHA256 17d6f4ac70efa20d6bb588dee17ec0064b42aa26f01187d625df8c30ee289338 SHA512 ece9a8f1b839ce54771ac6ea5a08c02223caa1596da8301684594acf0f1038458953071cc636fede7e91dd4f27cc34f12adb507d76f511f684a61b032a8433fb WHIRLPOOL a4fa97950dd8b09d87c2c2a9353a7d02e58f31e06e948532b2bde912708599ca9f75944bfbe237484a43b55b8d50f6a8824acf95b56362de7de9d687fc342dc9
 EBUILD htpdate-1.0.5.ebuild 1117 SHA256 9941e46a3b6f039e98a6a56db910edec6938247b82a9410b836a88f55c97c744 SHA512 18fc39083e220f3454bec14eff18afe2b2cdad5e299ca3b656445b6f340c2ca640fcb02184ecbf04423bb80bbdfd3796a77ec93e373d137590d285723853a9a0 WHIRLPOOL 87360839c322c4ed3a9feffe3c52af7ce0053196d87e56b1a951d2dcc3b4774fb4f90a89bacc4bfba4c0a381c56dc28b48ee31ad65b09b593a590e07e7e52b35
-MISC ChangeLog 6186 SHA256 242d35621c5c43f2cdf019e564c9e6304205bec5884b725a2ee0ef662ffa2a11 SHA512 02662b42a8569a3e5b6bb211d8a118e691480b8ad7063d368be082830f31cc59596850fef6e4bdf35eab41b683344a85b6e2ff13afce85b95b6e077377f618ea WHIRLPOOL 15b0f7a04772850a19d7303683cd170801cfd7f2f04cf84cc2b897a8fe107b9e8e48b663da5c055e3e7a23a9a7662d2f02df4feca5ba597317786746301782e9
+EBUILD htpdate-1.0.7.ebuild 1117 SHA256 b022ab8b621a13296211eca41ef8412e915ff778a89434bbcf0009ce278a8fd2 SHA512 d28c70a71c75fa74d04dbcdaeca4bef26392f8527cb43313fa728eb8978c76f939fdfde4661b824fcd5429410ad59fbdff7c6f1e02a1fc87eddbf2067d9e5ae9 WHIRLPOOL a35b4ccf66e6d23799b1ca76bb256ed612124ed42f135c399e9c65c1466de56f211ea1e90d4fa20dfa2d9c6099c599c069f7b8ac5791f659066015b387beb97d
+MISC ChangeLog 6305 SHA256 ab9a4e7edfc5c8b0906df67fdebf42206099d02954179ce7bb74c00d6967a919 SHA512 d54f3af1450e89dcd3afbafe4b255e485c2ef6f949ba40b1d2c5e31baca954ec7d36944d8d9dc125d3b44bfff01bce78388bb09fe5a866267b50f14a366f758d WHIRLPOOL 5d50cc7b70bada347e354066194347a277951c947f408bd073f6e42d83066894877134f8c2518639c6b16eaa481f0478833c3c1b23b7c9a46b85b1563325d213
 MISC metadata.xml 328 SHA256 778f012b17ddbaf498649a44d291c69cba5589434efe6221f8939f0b5fa0bc6d SHA512 f5c178697348141588ca385745664a7f6ee1011faeda0bd65ccdf1ae6bdf79306a3137f0a8371e495485de8588065c1f776ebd538043ff32746b3ae47c65c73b WHIRLPOOL 1d6a0c684931a426943637367207d42a122cafe37d1772ef8a4421250d0552a7eac8620b991ac86eb7950c478228b199531e72111a250a2f3896641e20d96e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJSCJNgAAoJECo/aRed9267eSUH/2wytdam2srTPigkfUKbFCxD
-eKpzs81C82CgPTMr2SRz2Yns0Ec+NBMY+FVnFN4tv6L6UKTJgmzO9DMggg2GdcMG
-ABnzcCa24WR8qyX1kb36G96JPxZo5hU33tNpRG/8Q6oyEwsWNGFM1d/4K4FGpYJh
-YA4pZNgiXea4708KVLZHShMhuq/XfFlDu4x61h0B583rgAEIWhFrLza9c2raXWLj
-FxwQY+4JHFQGSkmzfAl01RDpq3pWWWps9ICXvUH9L+nND/99gxAjeL0Lje/QO2Xn
-Pqcxtgl2S8onKuI5GpTeWUXbBYWDwq5/xNMGiCw23Z+0fmAO6USVBhoPsbOwWxw=
-=qJeO
+iQEcBAEBCAAGBQJSQBe2AAoJECo/aRed9267oMYH/1lz9G8asrLG8T980YIXhkZD
+JWI82to+2EBbvrrUbKCim69xqi61ONE58gRaaG96OLS5HWqiDTZ5dLkYrxCWe5BH
+6qxtAi2wNZ2Uby1khiv7oTc2THtKdQgbv8M9z4NPr4HFJqP3h+MY7AMUMdAJnszG
+KAxtnCs2zsdM266jcQQRJAXHm6RnmA7yQw3vDwcbqUjHH70Ob4FSK9/5vHoy4zKk
+MP2gpwuCHMujdzikIno0/vFVVPcZvMLyQ/hVsN2S8qYhKHrpT7E1PmIWwrYaOMBs
+UDAeTW3zs8Ypkj89Lnszn7cBoJmL7hjtTnRL65/GxkAqOxvdfUSoTDCT2/zYqjw=
+=b4fT
 -----END PGP SIGNATURE-----
