@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/htpdate
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/htpdate/ChangeLog,v 1.46 2013/08/12 07:50:18 pinkbyte Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/htpdate/ChangeLog,v 1.47 2013/09/23 10:29:08 pinkbyte Exp $
+
+*htpdate-1.0.7 (23 Sep 2013)
+
+  23 Sep 2013; Sergey Popov <pinkbyte@gentoo.org> +htpdate-1.0.7.ebuild:
+  Version bump
 
   12 Aug 2013; Sergey Popov <pinkbyte@gentoo.org> htpdate-1.0.5.ebuild:
   Add ~amd64-linux and ~x86-linux keywords
