@@ -1,6 +1,14 @@
 # ChangeLog for net-libs/libcapsinetwork
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libcapsinetwork/ChangeLog,v 1.15 2008/05/04 09:57:41 drac Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libcapsinetwork/ChangeLog,v 1.16 2013/09/23 10:14:21 pinkbyte Exp $
+
+*libcapsinetwork-0.3.0-r1 (23 Sep 2013)
+
+  23 Sep 2013; Sergey Popov <pinkbyte@gentoo.org>
+  +libcapsinetwork-0.3.0-r1.ebuild, metadata.xml:
+  Revision bump: EAPI 5, autotools-utils eclass, handle static libs building
+  and installation, add Prefix support, add ~arm and ~mips keywords. Take
+  maintainership of the package
 
   04 May 2008; Samuli Suominen <drac@gentoo.org>
   +files/libcapsinetwork-0.3.0-64bit.patch,
